Added option to specify imagePullSecrets

--- a/charts/zookeeper-operator/templates/service_account.yaml
+++ b/charts/zookeeper-operator/templates/service_account.yaml
@@ -1,6 +1,12 @@
 {{- if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
+{{- if .Values.serviceAccount.imagePullSecrets }}
+imagePullSecrets:
+{{- range .Values.serviceAccount.imagePullSecrets }}
+  - name: {{ . }}
+{{- end }}
+{{- end }}
 metadata:
   name: {{ .Values.serviceAccount.name }}
   namespace: {{ .Release.Namespace }}
