--- a/charts/zookeeper-operator/values.yaml
+++ b/charts/zookeeper-operator/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 
 image:
-  repository: pravega/zookeeper-operator
-  tag: latest
+  repository: amuraru/zookeeper-operator
+  tag: v0.2.6-adobe-2
   pullPolicy: IfNotPresent
 
 ## Install RBAC roles and bindings
