ISSUE-161 Helm chart lacks namespace fields on namespace scoped resources

--- a/charts/zookeeper-operator/templates/service_account.yaml
+++ b/charts/zookeeper-operator/templates/service_account.yaml
@@ -9,4 +9,5 @@ imagePullSecrets:
 {{- end }}
 metadata:
   name: {{ .Values.serviceAccount.name }}
+  namespace: {{ $.Release.Namespace }}
 {{- end }}
