[INTERNAL] - Keep compatibility with helm2 - ADDENDUM Issue 188
+ make validation post-install helm hook optional

--- a/charts/zookeeper/values.yaml
+++ b/charts/zookeeper/values.yaml
@@ -34,6 +34,7 @@ persistence:
   volumeSize: 20Gi
 
 hooks:
+  enabled: false
   image:
     repository: lachlanevenson/k8s-kubectl
     tag: v1.16.10
