--- a/charts/zookeeper/templates/post-install-upgrade-hooks.yaml
+++ b/charts/zookeeper/templates/post-install-upgrade-hooks.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.hooks.enabled }}
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -109,3 +110,4 @@ spec:
           configMap:
             name: {{ template "hook.fullname" . }}
             defaultMode: 0555
+{{- end }}
