--- a/charts/zookeeper/templates/post-install-upgrade-hooks.yaml
+++ b/charts/zookeeper/templates/post-install-upgrade-hooks.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.hooks.enabled }}
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -114,3 +115,4 @@ spec:
           configMap:
             name: {{ template "zookeeper.fullname" . }}-post-install-upgrade
             defaultMode: 0555
+{{- end }}
