[BUILD] - Updated base zk image to openjdk 14.0.2 (#4)
- use openjdk 14.0.2 as base image for zk
- added github action step to build adobe/zookeeper docker image
using the zk-operator startup scripts in this repo

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,16 +8,18 @@
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
 
-FROM openjdk:11-jdk
+FROM openjdk:14.0.2-slim
 RUN mkdir /zu
 COPY zu /zu
 WORKDIR /zu
 RUN ./gradlew --console=verbose --info shadowJar
 
-FROM zookeeper:3.6.1
+# use forked base zookeeper 3.6.1 docker image
+# that runs on openjdk-14.0.2 instead of openjdk-11
+FROM amuraru/zookeeper:3.6.1
 COPY bin /usr/local/bin
 RUN chmod +x /usr/local/bin/*
 COPY --from=0 /zu/build/libs/zu.jar /root/
 
 RUN apt-get -q update && \
-    apt-get install -y dnsutils curl procps
+    apt-get install --no-install-recommends -y curl dnsutils procps
